syntax = "proto3";

package transaction_records;

option go_package = "./pb";

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse);
  rpc UpdateTransaction(UpdateTransactionRequest) returns (TransactionResponse);
  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse);
}

message Transaction {
  string id = 1;
  string user_id = 2;
  string transaction_id = 3;
  double amount = 4;
  string status = 5;
  string timestamp = 6;
}

message CreateTransactionRequest {
  string user_id = 1;
  string transaction_id = 2;
  double amount = 3;
  string status = 4;
}

message GetTransactionRequest {
  string id = 1;
}

message UpdateTransactionRequest {
  string id = 1;
  optional string user_id = 2;
  optional string transaction_id = 3;
  optional double amount = 4;
  optional string status = 5;
}

message DeleteTransactionRequest {
  string id = 1;
}

message TransactionResponse {
  Transaction transaction = 1;
}

message DeleteTransactionResponse {
  bool success = 1;
}
